MOD fix layout issues

--- a/_sass/base/_mixins.scss
+++ b/_sass/base/_mixins.scss
@@ -34,8 +34,9 @@
 	background: $btn-background-color;
 	border: 1px solid $btn-color;
 	border-radius: none;
+	display: inline-block;
 	padding: 12px 12px;
-	margin: 0;
+	margin: 1em 0 0 0;
 	min-width: 4em;
 
 	color: $btn-color;
