--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -17,6 +17,10 @@ a {
   }
 }
 
+h1, h2, h3, p {
+  margin: 0;
+}
+
 // Basic font styles and mixins
 
 
