--- a/_sass/modules/_footer.scss
+++ b/_sass/modules/_footer.scss
@@ -2,6 +2,7 @@
 
 footer {
 	background: $wireframe-grey-dark;
+	clear: both;
 	margin: 0;
 	padding: 0;
 	width: auto;
