--- a/_sass/modules/_imprint.scss
+++ b/_sass/modules/_imprint.scss
@@ -1,5 +1,31 @@
 .article-imprint-wrapper {
-	@extend .article-jobs-wrapper;
+    margin: 0 auto;
+    padding-bottom: 8em;
+    max-width: 90%;
+
+    text-align: center;
+
+    h1 {
+        padding-bottom: 2rem;
+    }
+
+    p,
+    ul,
+    .btn {
+        max-width: 42em;
+        margin: 0 auto;
+        text-align: left;
+    }
+
+    .btn {
+        position: relative;
+        top: 4em;
+    }
+
+    .teaser {
+        text-align: center;
+        padding-bottom: 2em;
+    }
 
 	h2 {
 		text-align: left;
