--- a/_sass/modules/_navigation.scss
+++ b/_sass/modules/_navigation.scss
@@ -11,11 +11,12 @@ $navigation-background-color: $wireframe-shine-black;
     z-index: 2;
 
     ul {
+        margin: 0 0 0 0;
 
         li {
             display: none;
             float: left;
-            padding: 0.65em;
+            padding: 1em;
 
             a {
                 border: none;
